New Navbar added, more dynamic and intuitive

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ DEBUG=TRUE
 
 # Front-End Variables
 BASENAME=/
-#BACKEND_URL=
+BACKEND_URL=https://probable-space-carnival-pjjqg9rvxqg6h967x-3001.app.github.dev/
